[gd_scene load_steps=21 format=3 uid="uid://de8k2j2ebr1te"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_xko3q"]
[ext_resource type="Texture2D" uid="uid://c873wwgs7trff" path="res://assets/images/player/NAVICELLA PORCA.png" id="2_fxan6"]
[ext_resource type="PackedScene" uid="uid://cdwbpvdxeh7pt" path="res://scenes/bullet.tscn" id="2_kv8da"]
[ext_resource type="Texture2D" uid="uid://vyqttoc3i2px" path="res://assets/images/player/Fiamma.png" id="4_vr4ay"]
[ext_resource type="Texture2D" uid="uid://dtk03rpkp2ttj" path="res://assets/images/player/Effetto_sparo.png" id="5_qajxv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5qhnl"]
radius = 39.0
height = 86.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qqncm"]
atlas = ExtResource("2_fxan6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_umoq5"]
atlas = ExtResource("2_fxan6")
region = Rect2(128, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_asv2c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqncm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umoq5")
}],
"loop": true,
"name": &"Flying",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_khom4"]
atlas = ExtResource("4_vr4ay")
region = Rect2(132, 0, 33, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_e27i4"]
atlas = ExtResource("4_vr4ay")
region = Rect2(165, 0, 33, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajxku"]
atlas = ExtResource("4_vr4ay")
region = Rect2(198, 0, 33, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq5qc"]
atlas = ExtResource("4_vr4ay")
region = Rect2(231, 0, 33, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm7xa"]
atlas = ExtResource("4_vr4ay")
region = Rect2(264, 0, 33, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehmih"]
atlas = ExtResource("4_vr4ay")
region = Rect2(297, 0, 33, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7giwh"]
atlas = ExtResource("4_vr4ay")
region = Rect2(0, 0, 33, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v1i5"]
atlas = ExtResource("4_vr4ay")
region = Rect2(33, 0, 33, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3jkh"]
atlas = ExtResource("4_vr4ay")
region = Rect2(66, 0, 33, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftiu2"]
atlas = ExtResource("4_vr4ay")
region = Rect2(99, 0, 33, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_b0pl1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_khom4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e27i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajxku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq5qc")
}],
"loop": true,
"name": &"fire_loop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm7xa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehmih")
}],
"loop": false,
"name": &"fire_stop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7giwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v1i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3jkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftiu2")
}],
"loop": false,
"name": &"spark",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("muzzle_marker")]
position = Vector2(674, 437)
script = ExtResource("1_xko3q")
bullet_scene = ExtResource("2_kv8da")
muzzle_marker = NodePath("Marker2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5qhnl")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -57)

[node name="Flyng_Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_asv2c")
animation = &"Flying"
frame_progress = 0.403143

[node name="Fire_Sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.5, 67)
sprite_frames = SubResource("SpriteFrames_b0pl1")
animation = &"fire_loop"
frame = 3
frame_progress = 0.467455

[node name="Shoot_effect" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -48)
texture = ExtResource("5_qajxv")

[connection signal="animation_finished" from="Fire_Sprite" to="." method="_on_fire_sprite_animation_finished"]
